fix gap in footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -46,6 +46,8 @@
 .color-data__rgb{
   display: flex;
   flex-direction: row;
+justify-content: space-between;
+gap: 10px;
 }
 
 .color-data__color-preview {
